--- a/404.html
+++ b/404.html
@@ -16,15 +16,15 @@
     <link href="https://fonts.googleapis.com/css2?family=Rubik:ital,wght@0,300..900;1,300..900&display=swap"
           rel="stylesheet">
 
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="/index.css">
 
     <title>on the now</title>
-    <link rel="icon" type="image/png" href="on%20the%20now.png">
+    <link rel="icon" type="/image/png" href="/on%20the%20now.png">
 </head>
 <body>
 
 <h1 id="title">idk</h1>
 
-<script src="script.js"></script>
+<script src="/script.js"></script>
 </body>
 </html>
